--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "3": "^2.1.0",
     "express": "^4.16.4",
+    "helmet": "^3.15.1",
     "knex": "^0.16.3",
     "sqlite": "^3.0.2"
   },
